(chores) camel-base-engine: use unmodifiable list when possible